--- a/source/index.html
+++ b/source/index.html
@@ -1,13 +1,102 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>Название проекта</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/index.js" defer></script>
-  </head>
-  <body class="page__body">
-    <header class="header">Шапка</header>
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Питание для котов CAT ENERGY</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1">
+		<link rel="stylesheet" href="styles/styles.css">
+		<script src="scripts/index.js" defer></script>
+	</head>
+
+	<body class="page__body">
+		<div class="wrapper">
+			<header class="header">
+				<nav class="main-navigation">
+					<a class="main-navigation__logo" href="index.html">
+						<img src="./images/logo-mobile.svg" width="33" height="38" alt="Логотип">
+						<span class="visually-hidden">Логотип - ссылка на главную страницу</span>
+					</a>
+					<a class="main-navigation__logo-description" href="index.html">
+						<img src="./images/logo-description.svg" width="101" height="18" alt="CAT ENERGY">
+						<span class="visually-hidden">Логотип CAT ENERGY - ссылка на главную страницу</span>
+					</a>
+					????
+				</nav>
+			</header>
+
+			<main>
+				<h1 class="visually-hidden">Функциональное питание для котов Cat Energy</h1>
+				
+				<section class="promo">
+					<h2>Функциональное питание для котов</h2>
+					<p>Занялся собой? Займись котом!</p>
+					<img src="./images/index-can-mobile.png" width="280" height="270" alt="Банка корма">
+					<a href="#">Подобрать программу</a>
+				</section>
+
+				<!-- Список с описание вариантов линеек кормов -->
+				<section class="types-of-product">
+					<ul class="types-of-product__list">
+						<li class="types-of-product__item">
+							<h3>Похудение</h3>
+							<p>Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+							<a href="#">Каталог slim</a>
+						</li>
+						<li class="types-of-product__item">
+							<h3>Набор массы</h3>
+							<p>Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+							<a href="#">Каталог pro</a>
+						</li>
+					</ul>
+				</section>
+
+				<!-- Описание принципорв работы корма -->
+				<section class="about-product">
+					<h2>Как это работает</h2>
+					<ul class="about-product__list">
+						<ol class="about-product__item">
+							<p>Функциональное питание содержит только полезные питательные вещества.</p>
+							<img src="./images/icons/icon-leaf.svg" width="25" height="28" alt="Листок">
+						</ol>
+						<ol class="about-product__item">
+							<p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+							<img src="./images/icons/icon-food.svg" width="27" height="29" alt="Емкость">
+						</ol>
+						<ol class="about-product__item">
+							<p>Замените один-два приема обычной еды на наше функциональное питание.</p>
+							<img src="./images/icons/icon_eat.svg" width="26" height="30" alt="Еда">
+						</ol>
+						<ol class="about-product__item">
+							<p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+							<img src="./images/icons/icon-watch.svg" width="27" height="31" alt="Часы">
+						</ol>
+					</ul>
+				</section>
+
+				<!-- Описание примера работы корма -->
+				<section class="result">
+					<h2>Живой пример</h2>
+					<p>Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+					<dl>
+						<dt>Снижение веса</dt>
+							<dd>5 кг</dd>
+						<dt>Затрачено времени</dt>
+							<dd>60 дней</dd>
+					</dl>
+					<p>Затраты на питание: 15 000 РУБ.</p>
+					<div class="result-slider">
+						<img src="./images/cat-before.jpg" width="280" height="256" alt="Толстый кот">
+						<img src="./images/cat-after.jpg" width="280" height="256" alt="Нормальный кот">
+					</div>
+				</section>
+
+
+			</main>
+
+			<footer>
+
+			</footer>
+
+		</div>
+	</body>
 </html>
