--- a/source/catalog.html
+++ b/source/catalog.html
@@ -38,65 +38,151 @@
 			</header>
 
 			<main>
-				<h1 class="visually-hidden">Функциональное питание для котов Cat Energy</h1>
+				<h1 class="visually-hidden">Каталог продукции Cat Energy</h1>
+
+				<!-- Карточки каталога -->
+				<section class="catalog-product">
+					<h2>Каталог продукции</h2>
+					<ul class="catalog-product__list">
+						<li class="catalog-product__item">
+							<h3>Cat Energy PRO 500 г</h3>
+							<img src="./images/food-chicken.jpg" width="68" height="86" atl="Банка корма">
+							<dl>
+								<dt>Масса</dt>
+									<dd>500 г</dd>
+								<dt>Вкус</dt>
+									<dd>Курица</dd>
+								<dt>Цена</dt>
+									<dd>700 ₽</dd>
+							</dl>
+							<button class="button" type="button">Заказать</button>
+						</li>
+						<li class="catalog-product__item">
+							<h3>Cat Energy PRO 1000 г</h3>
+							<img src="./images/food-chicken.jpg" width="84" height="100" atl="Банка корма">
+							<dl>
+								<dt>Масса</dt>
+									<dd>1000 г</dd>
+								<dt>Вкус</dt>
+									<dd>Курица</dd>
+								<dt>Цена</dt>
+									<dd>1000 ₽</dd>
+							</dl>
+							<button class="button" type="button">Заказать</button>
+						</li>
+						<li class="catalog-product__item">
+							<h3>Cat Energy PRO 500 г</h3>
+							<img src="./images/food-fish.png" width="68" height="86" atl="Банка корма">
+							<dl>
+								<dt>Масса</dt>
+									<dd>500 г</dd>
+								<dt>Вкус</dt>
+									<dd>Рыба</dd>
+								<dt>Цена</dt>
+									<dd>700 ₽</dd>
+							</dl>
+							<button class="button" type="button">Заказать</button>
+						</li>
+						<li class="catalog-product__item">
+							<h3>Cat Energy PRO 1000 г</h3>
+							<img src="./images/food-fish.png" width="84" height="100" atl="Банка корма">
+							<dl>
+								<dt>Масса</dt>
+									<dd>1000 г</dd>
+								<dt>Вкус</dt>
+									<dd>Рыба</dd>
+								<dt>Цена</dt>
+									<dd>1000 ₽</dd>
+							</dl>
+							<button class="button" type="button">Заказать</button>
+						</li>
+						<li class="catalog-product__item">
+							<h3>Cat Energy Slim 500 г</h3>
+							<img src="./images/food-buckwheat.png" width="68" height="78" atl="Банка корма">
+							<dl>
+								<dt>Масса</dt>
+									<dd>500 г</dd>
+								<dt>Вкус</dt>
+									<dd>Гречка</dd>
+								<dt>Цена</dt>
+									<dd>400 ₽</dd>
+							</dl>
+							<button class="button" type="button">Заказать</button>
+						</li>
+						<li class="catalog-product__item">
+							<h3>Cat Energy Slim 1000 г</h3>
+							<img src="./images/food-buckwheat.png" width="84" height="100" atl="Банка корма">
+							<dl>
+								<dt>Масса</dt>
+									<dd>1000 г</dd>
+								<dt>Вкус</dt>
+									<dd>Гречка</dd>
+								<dt>Цена</dt>
+									<dd>700 ₽</dd>
+							</dl>
+							<button class="button" type="button">Заказать</button>
+						</li>
+						<li class="catalog-product__item">
+							<h3>Cat Energy Slim 500 г</h3>
+							<img src="./images/food-rice.png" width="72" height="84" atl="Банка корма">
+							<dl>
+								<dt>Масса</dt>
+									<dd>500 г</dd>
+								<dt>Вкус</dt>
+									<dd>Рис</dd>
+								<dt>Цена</dt>
+									<dd>500 ₽</dd>
+							</dl>
+							<button class="button" type="button">Заказать</button>
+						</li>
+						<li class="catalog-product__item catalog-product__item--show-more">
+							<h3>Показать еще 100500 товаров</h3>
+							<img src="./images/plus.svg" width="30" height="30" alt="Плюс">
+							<p>На самом деле вкусов еще больше!</p>
+							<button class="button button-show-more" type="button">Показать все</button>
+						</li>
+					</ul>
+				</section>
 				
-				<section class="promo">
-					<h2>Функциональное питание для котов</h2>
-					<p>Занялся собой? Займись котом!</p>
-					<img src="./images/index-can-mobile.png" width="280" height="270" alt="Банка корма">
-					<a href="#">Подобрать программу</a>
-				</section>
-
-				<!-- Список с описание вариантов линеек кормов -->
-				<section class="types-of-product">
-					<ul class="types-of-product__list">
-						<li class="types-of-product__item">
-							<h3>Похудение</h3>
-							<p>Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-							<a href="catalog.html">Каталог slim</a>
+				<!-- Каталог дополнительных товаров -->
+				<section class="other-product">
+					<ul class="other-product__list">
+						<li class="other-product__item">
+							<h3>Сахаразаменитель</h3>
+							<dl>
+								<dt>1 упаковка (100г)</dt>
+									<dd>200 ₽</dd>
+							</dl>
+							<button class="button" type="button">Заказать</button>
 						</li>
-						<li class="types-of-product__item">
-							<h3>Набор массы</h3>
-							<p>Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-							<a href="catalog.html">Каталог pro</a>
+						<li class="other-product__item">
+							<h3>Питьевая вода</h3>
+							<dl>
+								<dt>5 литров</dt>
+									<dd>50 ₽</dd>
+							</dl>
+							<button class="button" type="button">Заказать</button>
 						</li>
+						<li class="other-product__item">
+							<h3>Молоко</h3>
+							<dl>
+								<dt>1 литр</dt>
+									<dd>100 ₽</dd>
+							</dl>
+							<button class="button" type="button">Заказать</button>
+						</li>
+						<li class="other-product__item">
+							<h3>Витамины</h3>
+							<dl>
+								<dt>1 упаковка (30г)</dt>
+									<dd>300 ₽</dd>
+							</dl>
+						</li>
+						<button class="button" type="button">Заказать</button>
 					</ul>
-				</section>
-
-				<!-- Описание принципорв работы корма -->
-				<section class="about-product">
-					<h2>Как это работает</h2>
-					<ul class="about-product__list">
-						<ol class="about-product__item">
-							<p>Функциональное питание содержит только полезные питательные вещества.</p>
-						</ol>
-						<ol class="about-product__item">
-							<p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-						</ol>
-						<ol class="about-product__item">
-							<p>Замените один-два приема обычной еды на наше функциональное питание.</p>
-						</ol>
-						<ol class="about-product__item">
-							<p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
-						</ol>
-					</ul>
-				</section>
-
-				<!-- Описание примера работы корма -->
-				<section class="result">
-					<h2>Живой пример</h2>
-					<p>Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
-					<dl>
-						<dt>Снижение веса</dt>
-							<dd>5 кг</dd>
-						<dt>Затрачено времени</dt>
-							<dd>60 дней</dd>
-					</dl>
-					<p>Затраты на питание: 15 000 РУБ.</p>
-					<div class="result-slider">
-						<img class="result-slider__image-1" src="./images/cat-before.jpg" width="280" height="256" alt="Толстый кот">
-						<img class="result-slider__image-2" src="./images/cat-after.jpg" width="280" height="256" alt="Нормальный кот">
-					</div>
+					<article class="other-product__article">
+						<p>Закажите все и получите чехол для кота в подарок!</p>
+					</article>
 				</section>
 
 				<!-- Адрес и карта -->
@@ -159,7 +245,7 @@
 					</svg>
 				</a>
 			</footer>
-			
+
 		</div>
 	</body>
 </html>
