--- a/source/form.html
+++ b/source/form.html
@@ -37,66 +37,102 @@
 				</nav>
 			</header>
 
+
 			<main>
-				<h1 class="visually-hidden">Функциональное питание для котов Cat Energy</h1>
+				<h1 class="visually-hidden">Подбор программы от Cat Energy</h1>
 				
-				<section class="promo">
-					<h2>Функциональное питание для котов</h2>
-					<p>Занялся собой? Займись котом!</p>
-					<img src="./images/index-can-mobile.png" width="280" height="270" alt="Банка корма">
-					<a href="#">Подобрать программу</a>
-				</section>
+				<section class="form-request">
+					<h2>Подбор программы</h2>
+					<p>Заполните анкету, и мы подберем программу питания для вашего кота</p>
+					<form class="form-request__form" method="get" action="https://echo.htmlacademyru">
 
-				<!-- Список с описание вариантов линеек кормов -->
-				<section class="types-of-product">
-					<ul class="types-of-product__list">
-						<li class="types-of-product__item">
-							<h3>Похудение</h3>
-							<p>Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-							<a href="catalog.html">Каталог slim</a>
-						</li>
-						<li class="types-of-product__item">
-							<h3>Набор массы</h3>
-							<p>Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-							<a href="catalog.html">Каталог pro</a>
-						</li>
-					</ul>
-				</section>
+						<!-- Информация о животном -->
+						<fieldset class="pet-info">
+							<legend class="visually-hidden">Информация о животном</legend>
+							<ul class="pet-info__list">
+								<li class="pet-info__item">
+									<label for="pet-name">Имя:*</label>
+									<input type="text" id="pet-name" name="pet-name" placeholder="Барсик">
+								</li>
+								<li class="pet-info__item">
+									<label for="pet-weight">Вес (кг):*</label>
+									<input type="number" id="pet-weight" name="pet-weight" value="7">
+								</li>
+								<li class="pet-info__item">
+									<label for="pet-years">Возраст (лет):*</label>
+									<input type="number" id="pet-years" name="pet-years" value="7">
+								</li>
+							</ul>
+						</fieldset>
 
-				<!-- Описание принципорв работы корма -->
-				<section class="about-product">
-					<h2>Как это работает</h2>
-					<ul class="about-product__list">
-						<ol class="about-product__item">
-							<p>Функциональное питание содержит только полезные питательные вещества.</p>
-						</ol>
-						<ol class="about-product__item">
-							<p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-						</ol>
-						<ol class="about-product__item">
-							<p>Замените один-два приема обычной еды на наше функциональное питание.</p>
-						</ol>
-						<ol class="about-product__item">
-							<p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
-						</ol>
-					</ul>
-				</section>
+						<!-- Выбор линейки кормов -->
+						<fieldset class="choice-of-product">
+							<legend class="visually-hidden">Выбор линейки кормов</legend>
+							<ul class="choice-of-product__list">
+								<li class="choice-of-product__item">
+									<input type="radio" id="weight-loss" name="choice-of-product" value="weight-loss" aria-label="Похудение" checked>
+									<label for="sweight-loss">Похудение</label>
+								</li>
+								<li class="choice-of-product__item">
+									<input type="radio" id="weight-gain" name="choice-of-product" value="weight-gain" aria-label="Набор массы">
+									<label for="weight-gain">Набор массы</label>
+								</li>
+								<li class="choice-of-product__item">
+									<input type="radio" id="not-know" name="choice-of-product" value="not-know" aria-label="Не знаю (нужен ваш совет)">
+									<label for="not-know">Не знаю (нужен ваш совет)</label>
+								</li>
+							</ul>
+						</fieldset>
 
-				<!-- Описание примера работы корма -->
-				<section class="result">
-					<h2>Живой пример</h2>
-					<p>Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
-					<dl>
-						<dt>Снижение веса</dt>
-							<dd>5 кг</dd>
-						<dt>Затрачено времени</dt>
-							<dd>60 дней</dd>
-					</dl>
-					<p>Затраты на питание: 15 000 РУБ.</p>
-					<div class="result-slider">
-						<img class="result-slider__image-1" src="./images/cat-before.jpg" width="280" height="256" alt="Толстый кот">
-						<img class="result-slider__image-2" src="./images/cat-after.jpg" width="280" height="256" alt="Нормальный кот">
-					</div>
+						<!-- Данные владельца животного -->
+						<fieldset class="owner-info">
+							<legend>Контактные данные (владельца кота)</legend>
+							<ul class="owner-info__list">
+								<li class="owner-info__item">
+									<label for="owner-email">E-mail:*</label>
+									<input type="email" id="owner-email" name="owner-email" placeholder="kuklachev@gmail.com">
+								</li>
+								<li class="owner-info__item">
+									<label for="owner-telephone">Телефон:*</label>
+									<input type="tel" id="owner-telephone" name="owner-telephone" placeholder="8 (960) 900-60-90">
+								</li>
+							</ul>
+						</fieldset>
+
+						<!-- Комментарий -->
+						<fieldset class="comment">
+							<legend>Комментарий</legend>
+							<label class="visually-hidden" for="comment-area">Комментарий</label>
+							<textarea id="comment-area" name="comment-area" rows="5" cols="50">Расскажите обо всех повадках кота</textarea>
+						</fieldset>
+
+						<!-- Дополнительные продукты -->
+						<fieldset class="additionally">
+							<legend>Дополнитель</legend>
+							<label class="visually-hidden" for="comment-area">Дополнительно</label>
+							<ul class="additionally__list">
+								<li class="additionally__item">
+									<input type="checkbox" id="sweetener" name="sweetener" value="sweetener" aria-label="Сахарозаменитель" checked>
+									<label for="sweetener">Сахарозаменитель</label>
+								</li>
+								<li class="additionally__item">
+									<input type="checkbox" id="water" name="water" value="water" aria-label="Питьевая вода">
+									<label for="water">Питьевая вода</label>
+								</li>
+								<li class="additionally__item">
+									<input type="checkbox" id="milk" name="milk" value="milk" aria-label="Молоко">
+									<label for="milk">Молоко</label>
+								</li>
+								<li class="additionally__item">
+									<input type="checkbox" id="vitamins" name="vitamins" value="vitamins" aria-label="Витамины">
+									<label for="vitamins">Витамины</label>
+								</li>
+							</ul>
+						</fieldset>
+
+						<button class="button" type="button">Отправить заявку</button>
+						<p>* - Обязательные поля</p>
+					</form>
 				</section>
 
 				<!-- Адрес и карта -->
@@ -112,6 +148,7 @@
 				</section>
 				
 			</main>
+
 
 			<footer class="footer">
 				<a class="footer__logo" href="https://htmlacademy.ru/intensive/adaptive">
@@ -159,7 +196,7 @@
 					</svg>
 				</a>
 			</footer>
-			
+
 		</div>
 	</body>
 </html>
