--- a/source/index.html
+++ b/source/index.html
@@ -13,12 +13,8 @@
 			<header class="header">
 				<nav class="main-navigation">
 					<a class="main-navigation__logo" href="index.html">
-						<img src="./images/logo-mobile.svg" width="33" height="38" alt="Логотип">
-						<span class="visually-hidden">Логотип - ссылка на главную страницу</span>
-					</a>
-					<a class="main-navigation__logo-description" href="index.html">
-						<img src="./images/logo-description.svg" width="101" height="18" alt="CAT ENERGY">
-						<span class="visually-hidden">Логотип CAT ENERGY - ссылка на главную страницу</span>
+						<img src="./images/logo-mobile.svg" width="33" height="38" alt="Логотип - ссылка на главную страницу">
+						<img src="./images/logo-description.svg" width="101" height="18" alt="Логотип CAT ENERGY - ссылка на главную страницу">
 					</a>
 					<button class="main-navigation__toggle" type="button">
 						<span class="visually-hidden">Открыть меню</span>
@@ -38,13 +34,12 @@
 			</header>
 
 			<main>
-				<h1 class="visually-hidden">Функциональное питание для котов Cat Energy</h1>
-				
+			
 				<section class="promo">
-					<h2>Функциональное питание для котов</h2>
+					<h1>Функциональное питание для котов</h1>
 					<p>Занялся собой? Займись котом!</p>
 					<img src="./images/index-can-mobile.png" width="280" height="270" alt="Банка корма">
-					<a href="#">Подобрать программу</a>
+					<a href="form.html">Подобрать программу</a>
 				</section>
 
 				<!-- Список с описание вариантов линеек кормов -->
@@ -66,20 +61,20 @@
 				<!-- Описание принципорв работы корма -->
 				<section class="about-product">
 					<h2>Как это работает</h2>
-					<ul class="about-product__list">
-						<ol class="about-product__item">
+					<ol class="about-product__list">
+						<li class="about-product__item">
 							<p>Функциональное питание содержит только полезные питательные вещества.</p>
-						</ol>
-						<ol class="about-product__item">
+						</li>
+						<li class="about-product__item">
 							<p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-						</ol>
-						<ol class="about-product__item">
+						</li>
+						<li class="about-product__item">
 							<p>Замените один-два приема обычной еды на наше функциональное питание.</p>
-						</ol>
-						<ol class="about-product__item">
+						</li>
+						<li class="about-product__item">
 							<p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
-						</ol>
-					</ul>
+						</li>
+					</ol>
 				</section>
 
 				<!-- Описание примера работы корма -->
@@ -94,8 +89,8 @@
 					</dl>
 					<p>Затраты на питание: 15 000 РУБ.</p>
 					<div class="result-slider">
-						<img class="result-slider__image-1" src="./images/cat-before.jpg" width="280" height="256" alt="Толстый кот">
-						<img class="result-slider__image-2" src="./images/cat-after.jpg" width="280" height="256" alt="Нормальный кот">
+						<img class="result-slider__image-1" src="./images/cat-before.png" width="280" height="256" alt="Толстый кот">
+						<img class="result-slider__image-2" src="./images/cat-after.png" width="280" height="256" alt="Худой кот">
 					</div>
 				</section>
 
@@ -108,19 +103,20 @@
 							<p>Санкт-Петербург</p>
 						</address>
 					</div>
-					<div class="address-map"></div>
+					<div class="address-map">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7994.762473087486!2d30.309979649714336!3d59.937275742389886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1701317990021!5m2!1sru!2sru" width="320" height="362" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Точка на карте"></iframe>
+					</div>
 				</section>
 				
 			</main>
 
 			<footer class="footer">
 				<a class="footer__logo" href="https://htmlacademy.ru/intensive/adaptive">
-					<img src="./images/logo-footer.svg" width="128" height="24" alt="CAT ENERGY">
-					<span class="visually-hidden">Логотип CAT ENERGY - ссылка на главную страницу</span>
+					<img src="./images/logo-footer.svg" width="128" height="24" alt="Логотип CAT ENERGY - ссылка на главную страницу">
 				</a>
 
 				<!-- Ссылки на социальные страницы -->
-				<ul class="social-media__list">
+				<ul class="social-media">
 					<li class="social-media__item">
 						<a class="social-media__link" href="https://vk.com/htmlacademy" aria-label="В контакте">
 							<svg xmlns="http://www.w3.org/2000/svg" width="28" height="22" viewBox="0 0 28 22" fill="none">
@@ -159,7 +155,6 @@
 					</svg>
 				</a>
 			</footer>
-			
 		</div>
 	</body>
 </html>
