--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,42 +11,40 @@
 	<body class="page__body">
 		<div class="wrapper">
 			<header class="header">
-				<nav class="main-navigation">
-					<a class="main-navigation__logo" href="index.html">
-						<img src="./images/logo-mobile.svg" width="33" height="38" alt="Логотип">
-						<span class="visually-hidden">Логотип - ссылка на главную страницу</span>
-					</a>
-					<a class="main-navigation__logo-description" href="index.html">
-						<img src="./images/logo-description.svg" width="101" height="18" alt="CAT ENERGY">
-						<span class="visually-hidden">Логотип CAT ENERGY - ссылка на главную страницу</span>
-					</a>
-					<button class="main-navigation__toggle" type="button">
-						<span class="visually-hidden">Открыть меню</span>
-					</button>
-					<ul class="main-navigation__list">
-						<li class="main-navigation__item">
-							<a class="main-navigation__link" href="index.html">Главная</a>
-						</li>
-						<li class="main-navigation__item">
-							<a class="main-navigation__link" href="#">Каталог продукции</a>
-						</li>
-						<li class="main-navigation__item">
-							<a class="main-navigation__link" href="#">Подбор программы</a>
-						</li>
-					</ul>
-				</nav>
-			</header>
+				<header class="header">
+					<nav class="main-navigation">
+						<a class="main-navigation__logo" href="index.html">
+							<img src="./images/logo-mobile.svg" width="33" height="38" alt="Логотип - ссылка на главную страницу">
+							<img src="./images/logo-description.svg" width="101" height="18" alt="Логотип CAT ENERGY - ссылка на главную страницу">
+						</a>
+						<button class="main-navigation__toggle" type="button">
+							<span class="visually-hidden">Открыть меню</span>
+						</button>
+						<ul class="main-navigation__list">
+							<li class="main-navigation__item">
+								<a class="main-navigation__link" href="index.html">Главная</a>
+							</li>
+							<li class="main-navigation__item">
+								<a class="main-navigation__link" href="#">Каталог продукции</a>
+							</li>
+							<li class="main-navigation__item">
+								<a class="main-navigation__link" href="#">Подбор программы</a>
+							</li>
+						</ul>
+					</nav>
+				</header>
 
 			<main>
-				<h1 class="visually-hidden">Каталог продукции Cat Energy</h1>
 
 				<!-- Карточки каталога -->
 				<section class="catalog-product">
-					<h2>Каталог продукции</h2>
+					<h1>Каталог продукции</h1>
 					<ul class="catalog-product__list">
 						<li class="catalog-product__item">
-							<h3>Cat Energy PRO 500 г</h3>
-							<img src="./images/food-chicken.jpg" width="68" height="86" atl="Банка корма">
+							<a class="catalog-product__link" href="#">
+								<h3>Cat Energy PRO 500 г</h3>
+								<img src="./images/food-chicken.jpg" width="68" height="86" atl="Банка корма">
+							</a>
 							<dl>
 								<dt>Масса</dt>
 									<dd>500 г</dd>
@@ -55,11 +53,15 @@
 								<dt>Цена</dt>
 									<dd>700 ₽</dd>
 							</dl>
-							<button class="button" type="button">Заказать</button>
+							<a class="catalog-product__link--button" href="#">Заказать</a>
 						</li>
 						<li class="catalog-product__item">
-							<h3>Cat Energy PRO 1000 г</h3>
-							<img src="./images/food-chicken.jpg" width="84" height="100" atl="Банка корма">
+							<a class="catalog-product__link" href="#">
+								<h3>Cat Energy PRO 1000 г</h3>
+							</a>
+							<a class="catalog-product__link" href="#">
+								<img src="./images/food-chicken.jpg" width="84" height="100" atl="Банка корма">
+							</a>
 							<dl>
 								<dt>Масса</dt>
 									<dd>1000 г</dd>
@@ -68,11 +70,15 @@
 								<dt>Цена</dt>
 									<dd>1000 ₽</dd>
 							</dl>
-							<button class="button" type="button">Заказать</button>
+							<a class="catalog-product__link--button" href="#">Заказать</a>
 						</li>
 						<li class="catalog-product__item">
-							<h3>Cat Energy PRO 500 г</h3>
-							<img src="./images/food-fish.png" width="68" height="86" atl="Банка корма">
+							<a class="catalog-product__link" href="#">
+								<h3>Cat Energy PRO 500 г</h3>
+							</a>
+							<a class="catalog-product__link" href="#">
+								<img src="./images/food-fish.png" width="68" height="86" atl="Банка корма">
+							</a>
 							<dl>
 								<dt>Масса</dt>
 									<dd>500 г</dd>
@@ -81,11 +87,15 @@
 								<dt>Цена</dt>
 									<dd>700 ₽</dd>
 							</dl>
-							<button class="button" type="button">Заказать</button>
+							<a class="catalog-product__link--button" href="#">Заказать</a>
 						</li>
 						<li class="catalog-product__item">
-							<h3>Cat Energy PRO 1000 г</h3>
-							<img src="./images/food-fish.png" width="84" height="100" atl="Банка корма">
+							<a class="catalog-product__link" href="#">
+								<h3>Cat Energy PRO 1000 г</h3>
+							</a>
+							<a class="catalog-product__link" href="#">
+								<img src="./images/food-fish.png" width="84" height="100" atl="Банка корма">
+							</a>
 							<dl>
 								<dt>Масса</dt>
 									<dd>1000 г</dd>
@@ -94,11 +104,15 @@
 								<dt>Цена</dt>
 									<dd>1000 ₽</dd>
 							</dl>
-							<button class="button" type="button">Заказать</button>
+							<a class="catalog-product__link--button" href="#">Заказать</a>
 						</li>
 						<li class="catalog-product__item">
-							<h3>Cat Energy Slim 500 г</h3>
-							<img src="./images/food-buckwheat.png" width="68" height="78" atl="Банка корма">
+							<a class="catalog-product__link" href="#">
+								<h3>Cat Energy Slim 500 г</h3>
+							</a>
+							<a class="catalog-product__link" href="#">
+								<img src="./images/food-buckwheat.png" width="68" height="78" atl="Банка корма">
+							</a>
 							<dl>
 								<dt>Масса</dt>
 									<dd>500 г</dd>
@@ -107,11 +121,15 @@
 								<dt>Цена</dt>
 									<dd>400 ₽</dd>
 							</dl>
-							<button class="button" type="button">Заказать</button>
+							<a class="catalog-product__link--button" href="#">Заказать</a>
 						</li>
 						<li class="catalog-product__item">
-							<h3>Cat Energy Slim 1000 г</h3>
-							<img src="./images/food-buckwheat.png" width="84" height="100" atl="Банка корма">
+							<a class="catalog-product__link" href="#">
+								<h3>Cat Energy Slim 1000 г</h3>
+							</a>
+							<a class="catalog-product__link" href="#">
+								<img src="./images/food-buckwheat.png" width="84" height="100" atl="Банка корма">
+							</a>
 							<dl>
 								<dt>Масса</dt>
 									<dd>1000 г</dd>
@@ -120,11 +138,15 @@
 								<dt>Цена</dt>
 									<dd>700 ₽</dd>
 							</dl>
-							<button class="button" type="button">Заказать</button>
+							<a class="catalog-product__link--button" href="#">Заказать</a>
 						</li>
 						<li class="catalog-product__item">
-							<h3>Cat Energy Slim 500 г</h3>
-							<img src="./images/food-rice.png" width="72" height="84" atl="Банка корма">
+							<a class="catalog-product__link" href="#">
+								<h3>Cat Energy Slim 500 г</h3>
+							</a>
+							<a class="catalog-product__link" href="#">
+								<img src="./images/food-rice.png" width="72" height="84" atl="Банка корма">
+							</a>
 							<dl>
 								<dt>Масса</dt>
 									<dd>500 г</dd>
@@ -133,13 +155,14 @@
 								<dt>Цена</dt>
 									<dd>500 ₽</dd>
 							</dl>
-							<button class="button" type="button">Заказать</button>
+							<a class="catalog-product__link--button" href="#">Заказать</a>
 						</li>
 						<li class="catalog-product__item catalog-product__item--show-more">
-							<h3>Показать еще 100500 товаров</h3>
-							<img src="./images/plus.svg" width="30" height="30" alt="Плюс">
+							<a class="catalog-product__link" href="#">
+								<h3>Показать еще 100500 товаров</h3>
+							</a>
 							<p>На самом деле вкусов еще больше!</p>
-							<button class="button button-show-more" type="button">Показать все</button>
+							<a class="catalog-product__link--button button-show-more" href="#">Показать все</a>
 						</li>
 					</ul>
 				</section>
@@ -153,7 +176,7 @@
 								<dt>1 упаковка (100г)</dt>
 									<dd>200 ₽</dd>
 							</dl>
-							<button class="button" type="button">Заказать</button>
+							<a class="other-product__link" href="#">Заказать</a>
 						</li>
 						<li class="other-product__item">
 							<h3>Питьевая вода</h3>
@@ -161,7 +184,7 @@
 								<dt>5 литров</dt>
 									<dd>50 ₽</dd>
 							</dl>
-							<button class="button" type="button">Заказать</button>
+							<a class="other-product__link" href="#">Заказать</a>
 						</li>
 						<li class="other-product__item">
 							<h3>Молоко</h3>
@@ -169,7 +192,7 @@
 								<dt>1 литр</dt>
 									<dd>100 ₽</dd>
 							</dl>
-							<button class="button" type="button">Заказать</button>
+							<a class="other-product__link" href="#">Заказать</a>
 						</li>
 						<li class="other-product__item">
 							<h3>Витамины</h3>
@@ -178,7 +201,7 @@
 									<dd>300 ₽</dd>
 							</dl>
 						</li>
-						<button class="button" type="button">Заказать</button>
+						<a class="other-product__link" href="#">Заказать</a>
 					</ul>
 					<article class="other-product__article">
 						<p>Закажите все и получите чехол для кота в подарок!</p>
@@ -194,19 +217,20 @@
 							<p>Санкт-Петербург</p>
 						</address>
 					</div>
-					<div class="address-map"></div>
+					<div class="address-map">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7994.762473087486!2d30.309979649714336!3d59.937275742389886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1701317990021!5m2!1sru!2sru" width="320" height="362" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Точка на карте"></iframe>
+					</div>
 				</section>
 				
 			</main>
 
 			<footer class="footer">
 				<a class="footer__logo" href="https://htmlacademy.ru/intensive/adaptive">
-					<img src="./images/logo-footer.svg" width="128" height="24" alt="CAT ENERGY">
-					<span class="visually-hidden">Логотип CAT ENERGY - ссылка на главную страницу</span>
+					<img src="./images/logo-footer.svg" width="128" height="24" alt="Логотип CAT ENERGY - ссылка на главную страницу">
 				</a>
 
 				<!-- Ссылки на социальные страницы -->
-				<ul class="social-media__list">
+				<ul class="social-media">
 					<li class="social-media__item">
 						<a class="social-media__link" href="https://vk.com/htmlacademy" aria-label="В контакте">
 							<svg xmlns="http://www.w3.org/2000/svg" width="28" height="22" viewBox="0 0 28 22" fill="none">
