Добавила несколько изображений

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,7 +43,10 @@
 						<li class="catalog-product__item">
 							<a class="catalog-product__link" href="#">
 								<h3>Cat Energy PRO 500 г</h3>
-								<img src="./images/food-chicken.jpg" width="68" height="86" atl="Банка корма">
+								<picture>
+									<source media="(min-width: 800px)" srcset="./images/tablet-web-catalog-chicken-500@1x.png, ./images/tablet-web-catalog-chicken-500@2x.png 2x">
+									<img src="./images/mobile-catalog-chicken-500@1x.png" srcset="./images/mobile-catalog-chicken-500@2x.png 2x" width="68" height="86" atl="Банка корма">
+								</picture>
 							</a>
 							<dl>
 								<dt>Масса</dt>
@@ -60,7 +63,11 @@
 								<h3>Cat Energy PRO 1000 г</h3>
 							</a>
 							<a class="catalog-product__link" href="#">
-								<img src="./images/food-chicken.jpg" width="84" height="100" atl="Банка корма">
+								<picture>
+									<source media="(min-width: 1440px)" srcset="./images/web-catalog-chicken-1000@2x.png, ./images/web-catalog-chicken-1000@2x.png 2x">
+									<source media="(min-width: 800px)" srcset="./images/tabletcatalog-chicken-1000@1x.png, ./images/tablet-catalog-chicken-1000@2x.png 2x">
+									<img src="./images/mobile-catalog-chicken-1000@1x.png" srcset="./images/mobile-catalog-chicken-1000@2x.png 2x" width="84" height="100" atl="Банка корма">
+								</picture>
 							</a>
 							<dl>
 								<dt>Масса</dt>
