Исправление ошибки alt

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -69,7 +69,7 @@
 								<h3>Cat Energy PRO 500 г</h3>
 								<picture>
 									<source width="161" height="172" type="image/png" media="(min-width: 800px)" srcset="./images/catalog-chicken-500-tablet-web@1x.png 1x, ./images/catalog-chicken-500-tablet-web@2x.png 2x">
-									<img src="./images/catalog-chicken-500-mobile@1x.png" srcset="./images/catalog-chicken-500-mobile@2x.png 2x" width="68" height="86" atl="Банка корма с курицей">
+									<img src="./images/catalog-chicken-500-mobile@1x.png" srcset="./images/catalog-chicken-500-mobile@2x.png 2x" width="68" height="86" alt="Банка корма с курицей">
 								</picture>
 							</a>
 							<dl>
