--- a/source/index.html
+++ b/source/index.html
@@ -67,7 +67,7 @@
 					<picture>
 						<source width="709" height="609" type="image/png" media="(min-width: 1440px)" srcset="./images/index-can-web@1x.png 1x, ./images/index-can-web@2x.png 2x">
 						<source width="552" height="499" type="image/png" media="(min-width: 800px)" srcset="./images/index-can-tablet@1x.png 1x, ./images/index-can-tablet@2x.png 2x">
-						<img src="./images/index-can-mobile@1x.png" srcset="./images/index-can-mobile@2x.png 2x" width="280" height="270" atl="Банка корма">
+						<img src="./images/index-can-mobile@1x.png" srcset="./images/index-can-mobile@2x.png 2x" width="280" height="270" alt="Банка корма">
 					</picture>
 					<a href="form.html">Подобрать программу</a>
 				</section>
