--- a/source/form.html
+++ b/source/form.html
@@ -156,16 +156,14 @@
 
 				<!-- Адрес и карта -->
 				<section class="address">
-					<h2 class="visually-hidden">Адрес магазина CAT ENERGY</h2>
 					<div class="address-title">
-						<p>Приглашаем к сотрудничеству дилеров!</p>
-						<address>
-							<p>ул. Большая Конюшенная, д. 19/8</p>
-							<p>Санкт-Петербург</p>
+						<h2 >Приглашаем к сотрудничеству дилеров!<sapn class="visually-hidden">в магазин CAT ENERGY</sapn> </h2>
+						<address class="address-title__address">
+							<p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
 						</address>
 					</div>
 					<div class="address-map">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7994.762473087486!2d30.309979649714336!3d59.937275742389886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1701317990021!5m2!1sru!2sru" width="320" height="362" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Точка на карте"></iframe>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7994.762473087486!2d30.309979649714336!3d59.937275742389886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1701317990021!5m2!1sru!2sru" width="320" height="362" loading="lazy" title="Точка на карте"></iframe>
 					</div>
 				</section>
 				
