--- a/source/index.html
+++ b/source/index.html
@@ -58,17 +58,19 @@
 				</nav>
 			</header>
 
-			<main>
+			<main class="main">
 			
 				<section class="promo">
-					<h1>Функциональное питание для котов</h1>
-					<p>Занялся собой? Займись котом!</p>
+					<div class="promo__title">
+						<h1>Функциональное питание для котов</h1>
+						<p>Занялся собой? Займись котом!</p>
+					</div>
 					<picture>
 						<source width="709" height="609" type="image/png" media="(min-width: 1440px)" srcset="./images/index-can-web@1x.png 1x, ./images/index-can-web@2x.png 2x">
 						<source width="552" height="499" type="image/png" media="(min-width: 800px)" srcset="./images/index-can-tablet@1x.png 1x, ./images/index-can-tablet@2x.png 2x">
 						<img src="./images/index-can-mobile@1x.png" srcset="./images/index-can-mobile@2x.png 2x" width="280" height="270" alt="Банка корма">
 					</picture>
-					<a href="form.html">Подобрать программу</a>
+					<a class="button" href="form.html">Подобрать программу</a>
 				</section>
 
 				<!-- Список с описание вариантов линеек кормов -->
@@ -109,14 +111,14 @@
 				<!-- Описание примера работы корма -->
 				<section class="result">
 					<h2>Живой пример</h2>
-					<p>Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-					<dl>
+					<p class="result__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+					<dl class="result__list">
 						<dt>Снижение веса</dt>
 							<dd>5 кг</dd>
 						<dt>Затрачено времени</dt>
 							<dd>60 дней</dd>
 					</dl>
-					<p>Затраты на питание: 15 000 РУБ.</p>
+					<p class="result__expenses">Затраты на питание: 15 000 РУБ.</p>
 					<div class="result-slider">
 						<!-- Состояние слайдера before -->
 						<picture>
@@ -133,16 +135,14 @@
 
 				<!-- Адрес и карта -->
 				<section class="address">
-					<h2 class="visually-hidden">Адрес магазина CAT ENERGY</h2>
 					<div class="address-title">
-						<p>Приглашаем к сотрудничеству дилеров!</p>
-						<address>
-							<p>ул. Большая Конюшенная, д. 19/8</p>
-							<p>Санкт-Петербург</p>
+						<h2 >Приглашаем к сотрудничеству дилеров!<sapn class="visually-hidden">в магазин CAT ENERGY</sapn> </h2>
+						<address class="address-title__address">
+							<p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
 						</address>
 					</div>
 					<div class="address-map">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7994.762473087486!2d30.309979649714336!3d59.937275742389886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1701317990021!5m2!1sru!2sru" width="320" height="362" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Точка на карте"></iframe>
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7994.762473087486!2d30.309979649714336!3d59.937275742389886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1701317990021!5m2!1sru!2sru" width="320" height="362" loading="lazy" title="Точка на карте"></iframe>
 					</div>
 				</section>
 				
