Разметка текста для всех 3-х страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,7 +51,7 @@
 							<a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
 						</li>
 						<li class="main-navigation__item">
-							<a class="main-navigation__link" href="#">Подбор программы</a>
+							<a class="main-navigation__link" href="form.html">Подбор программы</a>
 						</li>
 					</ul>
 				</nav>
@@ -79,7 +79,7 @@
 								<dt>Цена</dt>
 									<dd>700 ₽</dd>
 							</dl>
-							<a class="catalog-product__link button" href="#">Заказать</a>
+							<a class="catalog-product__link buttons" href="#">Заказать</a>
 						</li>
 						<li class="catalog-product__item">
 							<a class="catalog-product__link" href="#">
@@ -100,7 +100,7 @@
 								<dt>Цена</dt>
 									<dd>1000 ₽</dd>
 							</dl>
-							<a class="catalog-product__link button" href="#">Заказать</a>
+							<a class="catalog-product__link buttons" href="#">Заказать</a>
 						</li>
 						<li class="catalog-product__item">
 							<a class="catalog-product__link" href="#">
@@ -120,7 +120,7 @@
 								<dt>Цена</dt>
 									<dd>700 ₽</dd>
 							</dl>
-							<a class="catalog-product__link button" href="#">Заказать</a>
+							<a class="catalog-product__link buttons" href="#">Заказать</a>
 						</li>
 						<li class="catalog-product__item">
 							<a class="catalog-product__link" href="#">
@@ -141,7 +141,7 @@
 								<dt>Цена</dt>
 									<dd>1000 ₽</dd>
 							</dl>
-							<a class="catalog-product__link button" href="#">Заказать</a>
+							<a class="catalog-product__link buttons" href="#">Заказать</a>
 						</li>
 						<li class="catalog-product__item">
 							<a class="catalog-product__link" href="#">
@@ -161,7 +161,7 @@
 								<dt>Цена</dt>
 									<dd>400 ₽</dd>
 							</dl>
-							<a class="catalog-product__link button" href="#">Заказать</a>
+							<a class="catalog-product__link buttons" href="#">Заказать</a>
 						</li>
 						<li class="catalog-product__item">
 							<a class="catalog-product__link" href="#">
@@ -182,7 +182,7 @@
 								<dt>Цена</dt>
 									<dd>700 ₽</dd>
 							</dl>
-							<a class="catalog-product__link button" href="#">Заказать</a>
+							<a class="catalog-product__link" href="#">Заказать</a>
 						</li>
 						<li class="catalog-product__item">
 							<a class="catalog-product__link" href="#">
@@ -202,20 +202,21 @@
 								<dt>Цена</dt>
 									<dd>500 ₽</dd>
 							</dl>
-							<a class="catalog-product__link button" href="#">Заказать</a>
+							<a class="catalog-product__link" href="#">Заказать</a>
 						</li>
 						<li class="catalog-product__item catalog-product__item--show-more">
 							<a class="catalog-product__link" href="#">
-								<h3>Показать еще 100500 товаров</h3>
+								<h3 class="catalog-product__title">Показать еще 100500 товаров</h3>
 							</a>
 							<p>На самом деле вкусов еще больше!</p>
-							<a class="catalog-product__link button-show-more" href="#">Показать все</a>
+							<a class="catalog-product__link--show-more" href="#">Показать все</a>
 						</li>
 					</ul>
 				</section>
 				
 				<!-- Каталог дополнительных товаров -->
 				<section class="other-product">
+					<h2>Дополнительные товары</h2>
 					<ul class="other-product__list">
 						<li class="other-product__item">
 							<h3>Сахаразаменитель</h3>
@@ -223,7 +224,7 @@
 								<dt>1 упаковка (100г)</dt>
 									<dd>200 ₽</dd>
 							</dl>
-							<a class="other-product__link" href="#">Заказать</a>
+							<a class="other-product__link buttons" href="#">Заказать</a>
 						</li>
 						<li class="other-product__item">
 							<h3>Питьевая вода</h3>
@@ -231,7 +232,7 @@
 								<dt>5 литров</dt>
 									<dd>50 ₽</dd>
 							</dl>
-							<a class="other-product__link" href="#">Заказать</a>
+							<a class="other-product__link buttons" href="#">Заказать</a>
 						</li>
 						<li class="other-product__item">
 							<h3>Молоко</h3>
@@ -239,7 +240,7 @@
 								<dt>1 литр</dt>
 									<dd>100 ₽</dd>
 							</dl>
-							<a class="other-product__link" href="#">Заказать</a>
+							<a class="other-product__link buttons" href="#">Заказать</a>
 						</li>
 						<li class="other-product__item">
 							<h3>Витамины</h3>
@@ -247,7 +248,7 @@
 								<dt>1 упаковка (30г)</dt>
 									<dd>300 ₽</dd>
 							</dl>
-							<a class="other-product__link" href="#">Заказать</a>
+							<a class="other-product__link buttons" href="#">Заказать</a>
 						</li>
 					</ul>
 					<div class="other-product__article">
@@ -258,7 +259,7 @@
 				<!-- Адрес и карта -->
 				<section class="address">
 					<div class="address-title">
-						<h2 >Приглашаем к сотрудничеству дилеров!<sapn class="visually-hidden">в магазин CAT ENERGY</sapn> </h2>
+						<h2>Приглашаем к сотрудничеству дилеров!</h2>
 						<address class="address-title__address">
 							<p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
 						</address>
