--- a/source/form.html
+++ b/source/form.html
@@ -51,7 +51,7 @@
 							<a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
 						</li>
 						<li class="main-navigation__item">
-							<a class="main-navigation__link" href="#">Подбор программы</a>
+							<a class="main-navigation__link" href="form.html">Подбор программы</a>
 						</li>
 					</ul>
 				</nav>
@@ -66,7 +66,7 @@
 					<form class="form-request__form" method="get" action="https://echo.htmlacademyru">
 
 						<!-- Информация о животном -->
-						<fieldset class="pet-info">
+						<fieldset class="pet-info fieldsets">
 							<legend class="visually-hidden">Информация о животном</legend>
 							<ul class="pet-info__list">
 								<li class="pet-info__item">
@@ -85,7 +85,7 @@
 						</fieldset>
 
 						<!-- Выбор линейки кормов -->
-						<fieldset class="choice-of-product">
+						<fieldset class="choice-of-product fieldsets">
 							<legend class="visually-hidden">Выбор линейки кормов</legend>
 							<ul class="choice-of-product__list">
 								<li class="choice-of-product__item">
@@ -104,7 +104,7 @@
 						</fieldset>
 
 						<!-- Данные владельца животного -->
-						<fieldset class="owner-info">
+						<fieldset class="owner-info fieldsets">
 							<legend>Контактные данные (владельца кота)</legend>
 							<ul class="owner-info__list">
 								<li class="owner-info__item">
@@ -119,14 +119,14 @@
 						</fieldset>
 
 						<!-- Комментарий -->
-						<fieldset class="comment">
+						<fieldset class="comment fieldsets">
 							<legend>Комментарий</legend>
 							<label class="visually-hidden" for="comment-area">Комментарий</label>
 							<textarea id="comment-area" name="comment-area" rows="5" cols="50">Расскажите обо всех повадках кота</textarea>
 						</fieldset>
 
 						<!-- Дополнительные продукты -->
-						<fieldset class="additionally">
+						<fieldset class="additionally fieldsets">
 							<legend>Дополнитель</legend>
 							<label class="visually-hidden" for="comment-area">Дополнительно</label>
 							<ul class="additionally__list">
@@ -149,15 +149,15 @@
 							</ul>
 						</fieldset>
 
-						<button class="button" type="submit">Отправить заявку</button>
-						<p>* - Обязательные поля</p>
+						<button class="buttons" type="submit">Отправить заявку</button>
+						<p class="form-request__form--required-fields">* - Обязательные поля</p>
 					</form>
 				</section>
 
 				<!-- Адрес и карта -->
 				<section class="address">
 					<div class="address-title">
-						<h2 >Приглашаем к сотрудничеству дилеров!<sapn class="visually-hidden">в магазин CAT ENERGY</sapn> </h2>
+						<h2>Приглашаем к сотрудничеству дилеров!</h2>
 						<address class="address-title__address">
 							<p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
 						</address>
