--- a/source/index.html
+++ b/source/index.html
@@ -52,7 +52,7 @@
 							<a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
 						</li>
 						<li class="main-navigation__item">
-							<a class="main-navigation__link" href="#">Подбор программы</a>
+							<a class="main-navigation__link" href="form.html">Подбор программы</a>
 						</li>
 					</ul>
 				</nav>
@@ -70,7 +70,7 @@
 						<source width="552" height="499" type="image/png" media="(min-width: 800px)" srcset="./images/index-can-tablet@1x.png 1x, ./images/index-can-tablet@2x.png 2x">
 						<img src="./images/index-can-mobile@1x.png" srcset="./images/index-can-mobile@2x.png 2x" width="280" height="270" alt="Банка корма">
 					</picture>
-					<a class="button" href="form.html">Подобрать программу</a>
+					<a class="buttons" href="form.html">Подобрать программу</a>
 				</section>
 
 				<!-- Список с описание вариантов линеек кормов -->
@@ -136,7 +136,7 @@
 				<!-- Адрес и карта -->
 				<section class="address">
 					<div class="address-title">
-						<h2 >Приглашаем к сотрудничеству дилеров!<sapn class="visually-hidden">в магазин CAT ENERGY</sapn> </h2>
+						<h2>Приглашаем к сотрудничеству дилеров!</h2>
 						<address class="address-title__address">
 							<p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
 						</address>
