Иконки mask-image

--- a/source/form.html
+++ b/source/form.html
@@ -187,25 +187,16 @@
       <!-- Ссылки на социальные страницы -->
       <ul class="social-media">
         <li class="social-media__item">
-          <a class="social-media__link reset-list" href="https://vk.com/htmlacademy" aria-label="В контакте">
-            <svg class="social-media__link-svg" width="28" height="22">
-              <use xlink:href="../../images/icons/stack.svg#vkontakte"></use>
-            </svg>
-          </a>
+          <a class="social-media__link social-media__link-vk reset-list" href="https://vk.com/htmlacademy"
+            aria-label="В контакте"></a>
         </li>
         <li class="social-media__item">
-          <a class="social-media__link reset-list" href="https://www.youtube.com/user/htmlacademyru" aria-label="Youtube">
-            <svg class="social-media__link-svg" width="28" height="22">
-              <use xlink:href="../../images/icons/stack.svg#youtube"></use>
-            </svg>
-          </a>
+          <a class="social-media__link social-media__link-youtube reset-list"
+            href="https://www.youtube.com/user/htmlacademyru" aria-label="Youtube"></a>
         </li>
         <li class="social-media__item">
-          <a class="social-media__link reset-list" href="https://t.me/htmlacademy" aria-label="Telegramm">
-            <svg class="social-media__link-svg" width="28" height="22">
-              <use xlink:href="../../images/icons/stack.svg#telegram"></use>
-            </svg>
-          </a>
+          <a class="social-media__link social-media__link-telegramm reset-list" href="https://t.me/htmlacademy"
+            aria-label="Telegramm"></a>
         </li>
       </ul>
 
