--- a/source/form.html
+++ b/source/form.html
@@ -24,25 +24,25 @@
           <picture>
             <!-- Для web версии -->
             <source width="70" height="59" media="(min-width: 1440px)" type="image/svg+xml"
-              srcset="./images/logo-web.svg">
+              srcset="../../images/icons/stack.svg#logo-web">
 
             <!-- Для tablet версии -->
             <source width="60" height="50" media="(min-width: 800px)" type="image/svg+xml"
-              srcset="./images/logo-tablet.svg">
+              srcset="../../images/icons/stack.svg#logo-tablet">
 
             <!-- Для mobile версии -->
-            <img src="./images/logo-mobile.svg" width="33" height="38" alt="Логотип - ссылка на главную страницу">
+            <img src="../../images/icons/stack.svg#logo-mobile" width="33" height="38"
+              alt="Логотип - ссылка на главную страницу">
           </picture>
 
           <!-- picture для логотипа-текста -->
           <picture>
             <!-- Для tablet и web версии -->
             <source width="101" height="18" media="(min-width: 800px)" type="image/svg+xml"
-              srcset="./images/logo-text-header-tablet.svg">
+              srcset="../../images/icons/stack.svg#logo-text-header-tablet">
 
             <!-- Для mobile версии -->
-            <img src="./images/logo-text-header-mobile.svg" width="101" height="18"
-              alt="Логотип - ссылка на главную страницу">
+            <img src="../../images/icons/stack.svg#logo-text-header-mobile" width="101" height="18" alt="Логотип - ссылка на главную страницу">
           </picture>
         </a>
         <button class="main-navigation__toggle reset-list" type="button">
