--- a/source/catalog.html
+++ b/source/catalog.html
@@ -21,7 +21,7 @@
         <a class="main-navigation__logo reset-list" href="index.html">
 
           <!-- picture для логотипа-картинки -->
-          <picture>
+          <picture class="main-navigation__logo--image">
             <!-- Для web версии -->
             <source width="70" height="59" media="(min-width: 1440px)" type="image/svg+xml"
               srcset="../../images/icons/stack.svg#logo-web">
@@ -42,13 +42,14 @@
               srcset="../../images/icons/stack.svg#logo-text-header-tablet">
 
             <!-- Для mobile версии -->
-            <img src="../../images/icons/stack.svg#logo-text-header-mobile" width="101" height="18" alt="Логотип - ссылка на главную страницу">
+            <img src="../../images/icons/stack.svg#logo-text-header-mobile" width="101" height="18"
+              alt="Логотип - ссылка на главную страницу">
           </picture>
         </a>
         <button class="main-navigation__toggle reset-list" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <ul class="main-navigation__list">
+        <ul class="main-navigation__list reset-list">
           <li class="main-navigation__item">
             <a class="main-navigation__link reset-list" href="index.html">Главная</a>
           </li>
